# proxmox-monitor-agent-home-assistant

./: .gitignore  CHANGELOG.md  README.md  hacs.json  pyproject.toml
custom_components/proxmox_monitor_agent/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  maintenance.py  manifest.json  options_flow.py  sensor.py  strings.json
examples/: metrics.example.json
tests/: conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entity.py  test_maintenance.py  test_sensor.py
tests/fixtures/: schema_v1_missing_dynamic_item.json  schema_v1_ok.json  schema_v1_partial.json  schema_v2_unsupported.json
