[project]
name = "proxmox-monitor-agent-home-assistant"
version = "0.1.1"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-homeassistant-custom-component",
  "aioresponses"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
